--- a/compose.yaml
+++ b/compose.yaml
@@ -33,6 +33,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./bug-tracker-backend/scripts/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./bug-tracker-backend/scripts/db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
 
 volumes:
   postgres_data:
