--- a/bug-tracker-backend/pom.xml
+++ b/bug-tracker-backend/pom.xml
@@ -88,6 +88,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version> <!-- Use the latest stable version if available -->
+		</dependency>
 	</dependencies>
 
 	<build>
