--- a/bug-tracker-backend/src/main/resources/application.properties
+++ b/bug-tracker-backend/src/main/resources/application.properties
@@ -13,4 +13,6 @@ spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.show-sql=true
 
 # === LOGGING ===
+logging.level.root=INFO
 logging.level.org.springframework=INFO
+logging.level.nathan_mead.bug_tracker=DEBUG
