--- a/bug-tracker-backend/pom.xml
+++ b/bug-tracker-backend/pom.xml
@@ -97,6 +97,12 @@
 			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.9.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
