--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   backend:
     build: ./bug-tracker-backend
     container_name: bug-tracker-backend
-    restart: always
+    restart: unless-stopped
     ports:
       - "8080:8080"
     depends_on:
@@ -16,7 +16,7 @@ services:
     build:
       context: ./bug-tracker-frontend
     container_name: bug-tracker-frontend
-    restart: always
+    restart: unless-stopped
     ports:
       - "3000:80"
     depends_on:
@@ -30,7 +30,7 @@ services:
   db:
     image: postgres:15
     container_name: bug-tracker-db
-    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_DB: bug_tracker
       POSTGRES_USER: postgres
