login from web page is now working. need to save token and replace login button with account button

--- a/bug-tracker-backend/src/main/resources/application.properties
+++ b/bug-tracker-backend/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.jpa.show-sql=true
 logging.level.root=INFO
 logging.level.org.springframework=INFO
 logging.level.nathan_mead.bug_tracker=DEBUG
+logging.level.org.springframework.security=DEBUG
