--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,8 @@ services:
       - "8080:8080"
     depends_on:
       - db
+    networks:
+      - app-network
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/bug_tracker
       SPRING_DATASOURCE_USERNAME: postgres
@@ -24,8 +26,23 @@ services:
     volumes:
       - ./bug-tracker-frontend:/app
       - /app/node_modules
+    networks:
+      - app-network
     environment:
       - CHOKIDAR_USEPOLLING=true
+
+  nginx:
+    image: nginx:alpine
+    container_name: bug-tracker-nginx
+    ports:
+      - "80:80"      # Nginx listens on port 80 externally
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Mount your custom Nginx config
+    depends_on:
+      - frontend
+      - backend
+    networks:
+      - app-network
 
   db:
     image: postgres:15
@@ -37,6 +54,8 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
+    networks:
+      - app-network
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./bug-tracker-backend/scripts/db/init.sql:/docker-entrypoint-initdb.d/init.sql
@@ -44,3 +63,7 @@ services:
 
 volumes:
   postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
