--- a/nginx.conf
+++ b/nginx.conf
@@ -2,13 +2,6 @@ server {
     listen 80;
     server_name localhost;
 
-    # Serve static files from your front end
-    location / {
-        proxy_pass http://bug-tracker-frontend:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
     # Reverse proxy for API calls
     location /api/ {
         proxy_pass http://bug-tracker-backend:8080;
@@ -20,5 +13,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_cache_bypass $http_upgrade;
+    }
+
+    # All other requests go to the frontend container.
+    location / {
+        proxy_pass http://bug-tracker-frontend:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
