updated for AWS deploy

--- a/defectrak-backend/.gitignore
+++ b/defectrak-backend/.gitignore
@@ -31,3 +31,11 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### OS-specific files ###
+.DS_Store
+Thumbs.db
+
+### Logs and temporary files ###
+*.log
+tmp/
