--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,13 @@
+version: '3.8'
+
 services:
   backend:
-    image: defectrak/starter-back
+    image: meadnl89/starter-back
     build: ./defectrak-backend
     container_name: defectrak-backend
     restart: unless-stopped
-    ports:
-      - "8080:8080"
+    expose:
+      - "8080"
     depends_on:
       - db
     networks:
@@ -15,31 +17,29 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
+
   frontend:
-    image: defectrak/starter-front
+    image: meadnl89/starter-front
     build:
       context: ./defectrak-frontend
     container_name: defectrak-frontend
     restart: unless-stopped
-    ports:
-      - "3000:80"
+    expose:
+      - "80"
     depends_on:
       - backend
-    volumes:
-      - ./defectrak-frontend:/app
-      - /app/node_modules
     networks:
       - app-network
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+				
+								
 
   nginx:
     image: nginx:alpine
     container_name: defectrak-nginx
     ports:
-      - "80:80"      # Nginx listens on port 80 externally
+      - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Mount your custom Nginx config
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
       - backend
@@ -54,14 +54,16 @@ services:
       POSTGRES_DB: defectrak
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
-    networks:
-      - app-network
+		  
+				   
+			 
+				   
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./defectrak-backend/scripts/db/init.sql:/docker-entrypoint-initdb.d/init.sql
       - ./defectrak-backend/scripts/db/seed.sql:/docker-entrypoint-initdb.d/seed.sql
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
