--- a/defectrak-backend/Dockerfile
+++ b/defectrak-backend/Dockerfile
@@ -1,4 +1,12 @@
-FROM openjdk:23
+# Stage 1: Build with Maven and Java 21
+FROM maven:3.9.4-eclipse-temurin-21 AS build
 WORKDIR /app
-COPY target/defectrak-0.0.1-SNAPSHOT.jar app.jar
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
+
+# Stage 2: Run with Java 21
+FROM eclipse-temurin:21-jdk
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
