--- a/defectrak-backend/Dockerfile
+++ b/defectrak-backend/Dockerfile
@@ -1,12 +1,16 @@
-# Stage 1: Build with Maven and Java 21
+# Stage 1: Build with Maven
 FROM maven:3.9.4-eclipse-temurin-21 AS build
+
 WORKDIR /app
 COPY pom.xml .
+RUN mvn dependency:resolve
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-# Stage 2: Run with Java 21
+# Stage 2: Run the built JAR
 FROM eclipse-temurin:21-jdk
+
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
+
 ENTRYPOINT ["java", "-jar", "app.jar"]
