--- a/defectrak-frontend/Dockerfile
+++ b/defectrak-frontend/Dockerfile
@@ -3,16 +3,18 @@ FROM node:20 AS builder
 
 WORKDIR /app
 COPY package.json package-lock.json ./
-# Set registry, clear cache, and install dependencies with unsafe-perm
-RUN npm config set registry https://registry.npmjs.org/ && npm cache clean --force && npm install --unsafe-perm
+RUN npm config set registry https://registry.npmjs.org/ && \
+    npm cache clean --force && \
+    npm install --unsafe-perm
 COPY . .
 RUN npm run build
 
 # Stage 2: Serve the React App with Nginx
 FROM nginx:alpine
-RUN rm -rf /usr/share/nginx/html/*
-RUN rm /etc/nginx/conf.d/default.conf
+RUN rm -rf /usr/share/nginx/html/* && \
+    rm /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
-COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx/frontend-nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
