--- a/defectrak-frontend/nginx/frontend-nginx.conf
+++ b/defectrak-frontend/nginx/frontend-nginx.conf
@@ -3,6 +3,12 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # Serve Let's Encrypt challenge files
+  location /.well-known/acme-challenge/ {
+    root /usr/share/nginx/html;
+    try_files $uri =404;
+  }
+
   location / {
     try_files $uri $uri/ /index.html;
   }
