--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -1,29 +1,8 @@
-# Redirect all HTTP traffic to HTTPS
 server {
     listen 80;
-    server_name defectrak.com www.defectrak.com;
+    server_name localhost;
 
-    location /.well-known/acme-challenge/ {
-        root /usr/share/nginx/html;
-        try_files $uri =404;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-# HTTPS server block
-server {
-    listen 443 ssl;
-    server_name defectrak.com www.defectrak.com;
-
-    ssl_certificate /etc/letsencrypt/live/defectrak.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/defectrak.com/privkey.pem;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-
+    # Proxy API requests to the backend
     location /api/ {
         proxy_pass http://defectrak-backend:8080;
         proxy_http_version 1.1;
@@ -36,6 +15,7 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    # All other requests go to the frontend
     location / {
         proxy_pass http://defectrak-frontend:80;
         proxy_set_header Host $host;
