--- a/compose.yaml
+++ b/compose.yaml
@@ -4,8 +4,8 @@ services:
     build: ./defectrak-backend
     container_name: defectrak-backend
     restart: unless-stopped
-    expose:
-      - "8080"
+    ports:
+      - "8080:8080"
     depends_on:
       - db
     networks:
@@ -20,10 +20,12 @@ services:
     image: meadnl89/starter-front
     build:
       context: ./defectrak-frontend
+      args:
+        REACT_APP_SYNCFUSION_LICENSE: ${REACT_APP_SYNCFUSION_LICENSE}
     container_name: defectrak-frontend
     restart: unless-stopped
-    expose:
-      - "80"
+    ports:
+      - "3000:80"
     depends_on:
       - backend
     networks:
@@ -35,12 +37,13 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.dev.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
       - backend
     networks:
       - app-network
+
 
   db:
     image: postgres:15
