--- a/defectrak-backend/Dockerfile
+++ b/defectrak-backend/Dockerfile
@@ -1,3 +1,3 @@
 FROM eclipse-temurin:21-jdk
-COPY target/defectrak-0.0.1-SNAPSHOT.jar /app.jar
+COPY app.jar /app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
