--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD to EC2 via Docker Hub
+name: CI/CD to EC2 via Docker Hub and SSM
 
 on:
   push:
@@ -36,22 +36,28 @@ jobs:
           push: true
           tags: meadnl89/starter-front:latest
           build-args: |
-            REACT_APP_SYNCFUSION_LICENSE=${{ secrets.REACT_APP_SYNCFUSION_LICENSE }}          
+            REACT_APP_SYNCFUSION_LICENSE=${{ secrets.REACT_APP_SYNCFUSION_LICENSE }}
 
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            cd /home/ubuntu/defectrak
-            echo "Pulling ltest images from Docker Hub..."
-            docker-compose pull
-            echo "Restarting containers..."
-            docker-compose up -d
-            echo "Pruning unused resources..."
-            docker system prune -af --volumes
-            echo "Deployment complete!"
-    
-          
+      - name: Install AWS CLI
+        run: |
+          sudo apt-get update && sudo apt-get install -y awscli
+
+      - name: Deploy via SSM
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          INSTANCE_ID: ${{ secrets.EC2_INSTANCE_ID }}
+        run: |
+          aws ssm send-command \
+            --document-name "AWS-RunShellScript" \
+            --instance-ids "$INSTANCE_ID" \
+            --region "$AWS_REGION" \
+            --comment "Deploy latest containers" \
+            --parameters commands='
+              cd /home/ubuntu/defectrak &&
+              docker-compose pull &&
+              docker-compose up -d &&
+              docker system prune -af --volumes
+            ' \
+            --output text
